feat: Refactor audio processing to delegate to content script and add transcript handling

--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
     "tabs",
     "activeTab",
     "scripting",
-    "desktopCapture",
-    "audioCapture"
+    "desktopCapture"
   ],
   "host_permissions": [
     "https://*.zoom.us/*",
